[gd_scene load_steps=31 format=2]

[ext_resource path="res://shaders_and_materials/gui/ui_concept.png" type="Texture" id=1]
[ext_resource path="res://shaders_and_materials/gui/options_hover.png" type="Texture" id=2]
[ext_resource path="res://shaders_and_materials/gui/right.png" type="Texture" id=3]
[ext_resource path="res://shaders_and_materials/gui/play_click.png" type="Texture" id=4]
[ext_resource path="res://shaders_and_materials/gui/right_hover.png" type="Texture" id=5]
[ext_resource path="res://shaders_and_materials/gui/play_hover.png" type="Texture" id=6]
[ext_resource path="res://shaders_and_materials/gui/right_click.png" type="Texture" id=7]
[ext_resource path="res://shaders_and_materials/gui/play.png" type="Texture" id=8]
[ext_resource path="res://shaders_and_materials/gui/options.png" type="Texture" id=9]
[ext_resource path="res://shaders_and_materials/gui/options_click.png" type="Texture" id=10]
[ext_resource path="res://shaders_and_materials/gui/left.png" type="Texture" id=11]
[ext_resource path="res://shaders_and_materials/gui/left_hover.png" type="Texture" id=12]
[ext_resource path="res://shaders_and_materials/gui/level_2.png" type="Texture" id=13]
[ext_resource path="res://shaders_and_materials/gui/left_clicked.png" type="Texture" id=14]
[ext_resource path="res://shaders_and_materials/gui/level_1.png" type="Texture" id=15]
[ext_resource path="res://MainMenu.gd" type="Script" id=16]
[ext_resource path="res://OptionsMenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=18]
[ext_resource path="res://shaders_and_materials/gui/right_hover_locked.png" type="Texture" id=19]
[ext_resource path="res://shaders_and_materials/gui/right_locked.png" type="Texture" id=20]
[ext_resource path="res://shaders_and_materials/gui/right_click _locked.png" type="Texture" id=21]
[ext_resource path="res://art/ui/lock/lockicon1.png" type="Texture" id=22]
[ext_resource path="res://art/ui/lock/lockicon5.png" type="Texture" id=23]
[ext_resource path="res://art/ui/lock/lockicon3.png" type="Texture" id=24]
[ext_resource path="res://art/ui/lock/lockicon4.png" type="Texture" id=25]
[ext_resource path="res://art/ui/lock/lockicon2.png" type="Texture" id=26]
[ext_resource path="res://game_elements/HUD.tscn" type="PackedScene" id=27]
[ext_resource path="res://shaders_and_materials/gui/level_3.png" type="Texture" id=28]
[ext_resource path="res://shaders_and_materials/bitneko_dynamicfont.tres" type="DynamicFont" id=29]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 23 ) ],
"loop": true,
"name": "unlock",
"speed": 12.0
} ]

[node name="MainMenu" type="MarginContainer" groups=["MainMenu"]]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 16 )

[node name="ui_concept" type="Sprite" parent="."]
position = Vector2( 120, 80 )
texture = ExtResource( 1 )

[node name="left" type="Sprite" parent="."]
position = Vector2( 120, 80 )
texture = ExtResource( 11 )

[node name="left_clicked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 14 )

[node name="left_hover" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 12 )

[node name="level_1" type="Sprite" parent="."]
position = Vector2( 118.765, 80.7927 )
texture = ExtResource( 15 )

[node name="level_3" type="Sprite" parent="."]
visible = false
position = Vector2( 118, 81 )
texture = ExtResource( 28 )

[node name="level_2" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 13 )

[node name="options" type="Sprite" parent="."]
position = Vector2( 120, 80 )
texture = ExtResource( 9 )

[node name="options_clicked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 10 )

[node name="options_hover" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 2 )

[node name="play" type="Sprite" parent="."]
position = Vector2( 120, 80 )
texture = ExtResource( 8 )

[node name="play_clicked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 4 )

[node name="play_hover" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 6 )

[node name="right" type="Sprite" parent="."]
position = Vector2( 120, 80 )
rotation = 0.00455044
texture = ExtResource( 3 )

[node name="right_clicked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 7 )

[node name="right_hover" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 5 )

[node name="right_click _locked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 21 )

[node name="right_hover_locked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 19 )

[node name="right_locked" type="Sprite" parent="."]
visible = false
position = Vector2( 120, 80 )
texture = ExtResource( 20 )

[node name="LockIcon" type="AnimatedSprite" parent="."]
position = Vector2( 110, 87 )
frames = SubResource( 1 )
animation = "unlock"
frame = 4

[node name="OptionsMenu" parent="." instance=ExtResource( 17 )]
visible = false
position = Vector2( 120, 80 )

[node name="button_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="HUD" parent="." instance=ExtResource( 27 )]

[node name="Control" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
margin_left = 120.0
margin_top = 20.0
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 80 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel"]
margin_left = 8.0
margin_right = 84.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 29 )
text = "are you sure you 
want to delete 
all progress?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control/Panel"]
margin_left = 46.0
margin_top = 55.0
margin_right = 66.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Panel/Button"]
margin_left = 4.0
margin_right = 44.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 29 )
text = "yes"

[node name="Button2" type="Button" parent="Control/Panel"]
margin_left = 12.0693
margin_top = 55.0
margin_right = 32.0693
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control/Panel/Button2"]
margin_left = 6.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 29 )
text = "no
"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="enable_menu" from="OptionsMenu" to="." method="_on_OptionsMenu_enable_menu"]
[connection signal="pressed" from="Control/Panel/Button" to="." method="reset"]
[connection signal="pressed" from="Control/Panel/Button2" to="." method="toggle_reset"]
